--- a/lib/package.json
+++ b/lib/package.json
@@ -2,7 +2,6 @@
   "name": "lib",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +9,7 @@
   "license": "ISC",
   "devDependencies": {
     "browserify": "^16.1.0",
+    "grunt": "^0.4.0",
     "grunt-browserify": "^5.2.0",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-sass": "^1.0.0",
